[package]
name = "std_tests"
version = "0.1.0"
authors = ["ElasT0ny <elast0ny00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.release]
debug = false
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'